# mundane-mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt  server.py
.github/workflows/: publish-mcp-image.yml  publish-mcp-pypi.yml
src/mcp_server/: server.py
tests/: test_agent_dx_clarity.py  test_experience_feedback.py  test_live_location.py  test_proof_retrieval.py  test_task_attachments.py  test_task_chat.py  test_task_events.py  test_version_check.py  test_worker_presence.py
