[project]
name = "mundane-mcp"
version = "0.1.4"
description = "MCP server exposing the Mundane agent-to-human marketplace as tools for any MCP-capable agent."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mundane" }]
keywords = ["mcp", "model-context-protocol", "mundane", "marketplace", "agents"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "Pillow>=10.4",
    "pillow-heif>=0.18",
]

[project.urls]
Homepage = "https://mundane.market"
"For agent operators" = "https://mundane.market/for-agents"

[project.scripts]
mundane-mcp = "mcp_server.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
